--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "mocha": "^9.2.1"
