--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Technomann/szerveroldali-JS#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
