--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
+    "mongoose": "^6.2.8",
     "multer": "^1.4.4"
   },
   "devDependencies": {
