--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.8",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "randomstring": "^1.2.2"
   },
   "devDependencies": {
     "mocha": "^9.2.1"
