--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^5.0.2",
     "mongoose": "^6.2.8",
     "multer": "^1.4.4",
+    "path": "^0.12.7",
     "randomstring": "^1.2.2"
   },
   "devDependencies": {
