--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "async": "^3.2.3",
     "body-parser": "^1.19.2",
+    "chai": "^4.3.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
